syntax = "proto3";
package autotest.protobuf;
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "proto/stages/stages.proto";
option go_package = "github.com/scaumiao/autotest/proto/task;task";
// import "gitlab.iyorhe.com/wfgz/reverseproxy/proto/autotest/report/report.proto";

service TaskService {
    rpc CreateTask(Task) returns (Task) {
        option (google.api.http) = {
            post: "/v1/task"
            body: "*"
        };
    }
    rpc GetTask(Task) returns (Task) {
        option (google.api.http) = {
            get: "/v1/task/{id}"
        };
    }
    rpc GetTaskList(google.protobuf.Empty) returns (TaskList) {
        option (google.api.http) = {
            get: "/v1/tasks"
        };
    }
    rpc DeleteTask(Task) returns (Task) {
        option (google.api.http) = {
            delete: "/v1/task/{id}"
        };
    }
    rpc UpdateTask(Task) returns (Task) {
        option (google.api.http) = {
            put: "/v1/task/{id}"
            body: "*"
        };
    }
    rpc RunTask(Task) returns (Job){
        option (google.api.http) = {
            post: "/v1/task/{id}/run"
            body: "*"
        };
    }
    rpc GetJobList(google.protobuf.Empty) returns (JobList){
        option (google.api.http) = {
            get: "/v1/jobs"
        };
    }
}

// message CreateTaskRequest {
//     string name = 1;
// }
// message CreateTaskResponse {
//     string id = 1;
// }
// message UpdateTaskRequest {
//     string id = 1;
//     string name = 2;
// }
message Task {
    string id = 1;
    string name = 2;
    string script = 3;
}
message TaskList {
    repeated Task tasks = 1;
}
message Job {
    string id = 1;
    string taskId = 2;
    string script = 3;
    string msg = 4;
    string result = 5;
    google.protobuf.Timestamp start_at = 6;
    google.protobuf.Timestamp end_at = 7;
    repeated autotest.protobuf.Stage stages= 8;
}
message JobList {
    repeated Job jobs = 1;
}